fixed the button and hopefully the calender option on iphone

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ h4 {
     transition: all 0.3s ease; /* Add transition for background color and border */
     letter-spacing: 0.4ch;
     background-color: var(--color-primary);
+    color: var(--color-darker);
 }
 
 .button:hover,
@@ -475,6 +476,8 @@ h4 {
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
     font-family: var(--font-primary);
     min-height: 46px;
+    max-width: 100%;
+    min-width: 120px;
 }
 
 .booking-widget__input:hover {
